7149062: [macosx] dock menu don't show available frames

Inherit from either NSWindow for normal windows or NSPanel for utility windows

Reviewed-by: skovatch, swingler